[gd_scene load_steps=21 format=3 uid="uid://bltffp755yv3d"]

[ext_resource type="Script" path="res://scenes/entities/troops/scripts/ship_entity.gd" id="1_ohlg0"]
[ext_resource type="Resource" uid="uid://erbspqhlwv8t" path="res://core/resources/boats/small_boat.tres" id="2_wosaj"]
[ext_resource type="Shader" uid="uid://hog7djv15huq" path="res://shaders/damage.tres" id="2_yq7l4"]
[ext_resource type="PackedScene" uid="uid://bj2wk2h13kw1k" path="res://core/state_machine/state_machine.tscn" id="3_ogx4m"]
[ext_resource type="Script" path="res://core/state_machine/states/move.gd" id="4_8etds"]
[ext_resource type="Texture2D" uid="uid://daer4iyqtrymd" path="res://assets/game/troops/small_boat.png" id="4_fxqat"]
[ext_resource type="Script" path="res://core/state_machine/states/attack.gd" id="5_h6of4"]
[ext_resource type="PackedScene" uid="uid://io37rp0r6wl6" path="res://core/components/water_collision_component.tscn" id="5_pvrbk"]
[ext_resource type="Script" path="res://core/state_machine/states/death.gd" id="6_d05p6"]
[ext_resource type="PackedScene" uid="uid://dkruatpb84415" path="res://core/components/hitbox_component.tscn" id="7_rw84j"]
[ext_resource type="PackedScene" uid="uid://bw5d2h55ply2w" path="res://core/components/health_component.tscn" id="8_qehx0"]
[ext_resource type="PackedScene" uid="uid://chtsijarpkyuk" path="res://core/components/radar_component.tscn" id="9_wiqbi"]
[ext_resource type="PackedScene" uid="uid://hcvj4c35uk0o" path="res://core/components/particles_component.tscn" id="10_4k1mg"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_gx1ce"]
resource_local_to_scene = true
noise_type = 5
frequency = 1.0
fractal_type = 0
fractal_octaves = 10
fractal_lacunarity = 0.0
fractal_gain = 0.0
fractal_weighted_strength = 1.0
domain_warp_type = 1
domain_warp_amplitude = 48.855
domain_warp_frequency = 5.0
domain_warp_fractal_type = 0
metadata/_preview_in_3d_space_ = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_thubd"]
resource_local_to_scene = true
width = 16
height = 16
seamless_blend_skirt = 0.0
as_normal_map = true
bump_strength = 32.0
noise = SubResource("FastNoiseLite_gx1ce")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gboy0"]
resource_local_to_scene = true
shader = ExtResource("2_yq7l4")
shader_parameter/dissolve = 1.0
shader_parameter/Noise = SubResource("NoiseTexture2D_thubd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2pvmq"]
size = Vector2(30, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gnul5"]
size = Vector2(30, 15)

[sub_resource type="CircleShape2D" id="CircleShape2D_l442v"]
resource_local_to_scene = true
radius = 150.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2h8i"]
size = Vector2(30, 12)

[node name="ShipEntity" type="RigidBody2D"]
position = Vector2(1, 0)
collision_mask = 128
gravity_scale = 0.1
inertia = 96.02
linear_damp = 3.0
script = ExtResource("1_ohlg0")
entity_stats = ExtResource("2_wosaj")

[node name="BoatSprite" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_gboy0")
texture = ExtResource("4_fxqat")

[node name="WaterCollisionComponent" parent="." node_paths=PackedStringArray("ship") instance=ExtResource("5_pvrbk")]
z_index = 1
position = Vector2(1, -0.5)
shape = SubResource("RectangleShape2D_2pvmq")
ship = NodePath("..")

[node name="StateMachine" parent="." node_paths=PackedStringArray("starting_state") instance=ExtResource("3_ogx4m")]
starting_state = NodePath("Move")

[node name="Move" type="Node" parent="StateMachine" node_paths=PackedStringArray("health_component", "radar_component", "particle_component")]
script = ExtResource("4_8etds")
health_component = NodePath("../../HealthComponent")
radar_component = NodePath("../../RadarComponent")
particle_component = NodePath("../../ParticlesComponent")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("health_component", "radar_component")]
script = ExtResource("5_h6of4")
health_component = NodePath("../../HealthComponent")
radar_component = NodePath("../../RadarComponent")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("particle_component")]
script = ExtResource("6_d05p6")
particle_component = NodePath("../../ParticlesComponent")

[node name="HitboxComponent" parent="." node_paths=PackedStringArray("health_component", "particle_component", "entity") instance=ExtResource("7_rw84j")]
collision_layer = 2
collision_mask = 0
health_component = NodePath("../HealthComponent")
particle_component = NodePath("../ParticlesComponent")
entity = NodePath("..")

[node name="HitboxShape" type="CollisionShape2D" parent="HitboxComponent"]
z_index = 1
shape = SubResource("RectangleShape2D_gnul5")
debug_color = Color(0.976049, 0, 0.414808, 0.42)

[node name="HealthComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("8_qehx0")]
default_health = 10.0
entity = NodePath("..")
metadata/_edit_use_anchors_ = true

[node name="RadarComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("9_wiqbi")]
z_index = 1
collision_mask = 514
entity = NodePath("..")

[node name="RadarShape" type="CollisionShape2D" parent="RadarComponent"]
shape = SubResource("CircleShape2D_l442v")
debug_color = Color(0.7, 0, 0.0116665, 0)

[node name="ParticlesComponent" parent="." node_paths=PackedStringArray("entity") instance=ExtResource("10_4k1mg")]
z_index = 1
shape = SubResource("RectangleShape2D_g2h8i")
debug_color = Color(0, 0.643738, 0.294445, 0.42)
entity = NodePath("..")

[connection signal="death_event" from="HealthComponent" to="HitboxComponent" method="_on_health_component_death_event"]
